# fastfood-simulator

./: History.md  README.md  package-lock.json  package.json
client/: package-lock.json  package.json
client/helpers/: api-util.js
client/pages/: index.js
client/pages/api/order/: index.js
client/pages/api/register/: index.js
client/pages/api/socket/: index.js
client/styles/: Home.module.css
helpers/: api-util.js
server/: Cargo.toml
server/src/: handler.rs  main.rs  model.rs
server/src/model/: main.rs
