[package]
name = "fastfood-simulator"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
tokio-stream = "0.1.9"
warp = "0.3"
serde = {version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
futures = { version = "0.3", default-features = false }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
crossbeam = "0.7"
actix-web = "4"
ureq = { version = "2.5.0", features = ["json"] }